fix(keycloak): separate admin vs self registration, allow admin userType, and stabilize Docker build (closes #105, #107)
- realm.json: allow 'admin' in userProfile validation (without exposing it in the public select), keep roles in token via 'roles' scope mapper
- KeycloakAdminService: split flows
  - createUserByAdmin(): temp password + UPDATE_PASSWORD email + role assignment + userType attr mirror
  - registerUserSelf(): permanent password + default realm role + userType attr mirror
  - remove redundant ensureUserTypeAttribute() double update that caused 400s
- AdminUserController: wire to new methods; add endpoints with Swagger annotations & constants
- Frontend Dockerfile: switch to node:20-bullseye and cache npm to avoid BuildKit 'max depth exceeded' on Windows
- .dockerignore: ignore node_modules/dist/build for slimmer contexts

Result: self-registration auto-login works, admin-created users are forced to update password at first login via email link, SPA receives proper realm roles, and Docker builds reliably on Windows.